--- a/WeComLoad/MainWindow.xaml
+++ b/WeComLoad/MainWindow.xaml
@@ -37,7 +37,7 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <RichTextBox x:Name="richText_login_status"></RichTextBox>
+                <RichTextBox BorderThickness="0" HorizontalAlignment="Center" VerticalAlignment="Center" x:Name="richText_login_status"></RichTextBox>
                 <RichTextBox Grid.Row="1" x:Name="richText_login_cookie"></RichTextBox>
             </Grid>
             <RichTextBox Grid.Row="1" Grid.ColumnSpan="2" x:Name="richText_resp"></RichTextBox>
