--- a/WeComLoad/MainWindow.xaml
+++ b/WeComLoad/MainWindow.xaml
@@ -19,6 +19,7 @@
             <Button Margin="5, 0" Click="Button_GetAgents_Click">获取应用列表</Button>
             <Button Margin="5, 0" Click="Button_GetExtContactAndUserSecret_Click">查看客户联系、通讯录Secret</Button>
             <Button Margin="5, 0" Click="Button_CreateAgent_Click">创建应用</Button>
+            <Button Margin="5, 0" Click="Button_ConfigCallback_Click">配置企业通讯录回调</Button>
         </DockPanel>
 
         <Grid Grid.Row="1">
