--- a/WeComLoad/MainWindow.xaml
+++ b/WeComLoad/MainWindow.xaml
@@ -6,23 +6,25 @@
         xmlns:local="clr-namespace:WeComLoad"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="650" Width="800">
+        Title="WeComLoad" Height="650" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="10"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <DockPanel LastChildFill="False">
+        <DockPanel LastChildFill="False" Grid.Row="1">
             <Button Margin="5, 0"  Click="Button_GetQrCode_Click">*获取登录二维码*</Button>
             <Button Margin="5, 0" Click="Button_GetCorpDepts_Click">获取企业部门列表</Button>
             <Button Margin="5, 0" Click="Button_GetAgents_Click">获取应用列表</Button>
             <Button Margin="5, 0" Click="Button_GetExtContactAndUserSecret_Click">查看客户联系、通讯录Secret</Button>
             <Button Margin="5, 0" Click="Button_CreateAgent_Click">创建应用</Button>
-            <Button Margin="5, 0" Click="Button_ConfigCallback_Click">配置企业通讯录回调</Button>
+            <Button Margin="5, 0" Click="Button_ConfigContactCallback_Click">配置企业通讯录回调</Button>
+            <Button Margin="5, 0" Click="Button_ConfigExtContactCallback_Click">配置客户联系回调</Button>
         </DockPanel>
 
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition />
