--- a/src/WeComLoad.Open/Views/CustomAppView.xaml
+++ b/src/WeComLoad.Open/Views/CustomAppView.xaml
@@ -5,8 +5,13 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WeComLoad.Open.Views"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:cv="clr-namespace:WeComLoad.Open.Common.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <cv:ObjToVisibilityConverter x:Key="ObjToVisibilityConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -27,7 +32,12 @@
                     </Button>
                 </DockPanel>
 
-                <ListBox ItemsSource="{Binding CustomApps}" Margin="0, 10, 0, 0"  ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalContentAlignment="Stretch">
+                <ListBox x:Name="customAppList" ItemsSource="{Binding CustomApps}" Margin="0, 10, 0, 0"  ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalContentAlignment="Stretch">
+                    <i:Interaction.Triggers>
+                        <i:EventTrigger EventName="SelectionChanged">
+                            <i:InvokeCommandAction Command="{Binding SelectedCustomAppCommand}" CommandParameter="{Binding ElementName=customAppList, Path=SelectedItem}"/>
+                        </i:EventTrigger>
+                    </i:Interaction.Triggers>
                     <ListBox.ItemTemplate>
                         <DataTemplate>
                             <DockPanel MaxHeight="80" LastChildFill="False">
@@ -57,13 +67,23 @@
                     </Button>
                 </DockPanel>
 
-                <ListBox Margin="0, 10, 0, 0" ItemsSource="{Binding Memos}"  ScrollViewer.VerticalScrollBarVisibility="Hidden">
+                <ListBox Margin="0, 10, 0, 0" ItemsSource="{Binding CustomAppAuths}"  ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalContentAlignment="Stretch">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
-                            <StackPanel MaxHeight="80">
-                                <TextBlock Text="{Binding Title}" FontSize="16" FontWeight="Bold"/>
-                                <TextBlock Text="{Binding Content}" Opacity="0.5"/>
-                            </StackPanel>
+                            <DockPanel MaxHeight="80" LastChildFill="False">
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Source="{Binding logo}" Width="30" Height="30">
+                                        <Image.Clip>
+                                            <EllipseGeometry Center="15, 15" RadiusY="15" RadiusX="15" />
+                                        </Image.Clip>
+                                    </Image>
+                                    <StackPanel Margin="15,0">
+                                        <TextBlock Text="{Binding authcorp_name}" FontSize="16" FontWeight="Bold" VerticalAlignment="Center"/>
+                                        <TextBlock Text="{Binding name}" Opacity="0.5" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                </StackPanel>
+                                <Button Visibility="{Binding auditorder, Converter={StaticResource ObjToVisibilityConverter}}" DockPanel.Dock="Right" >审核</Button>
+                            </DockPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
                 </ListBox>
