--- a/src/WeComLoad.Open/Views/CustomAppView.xaml
+++ b/src/WeComLoad.Open/Views/CustomAppView.xaml
@@ -6,7 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:cv="clr-namespace:WeComLoad.Open.Common.Converters"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" x:Name="CustomApp"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <cv:ObjToVisibilityConverter x:Key="ObjToVisibilityConverter"/>
@@ -78,11 +78,6 @@
                     </DockPanel>
 
                     <ListBox x:Name="customAppAuthList" Margin="0, 10, 0, 0" ItemsSource="{Binding CustomAppAuths}"  ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalContentAlignment="Stretch">
-                        <i:Interaction.Triggers>
-                            <i:EventTrigger EventName="SelectionChanged">
-                                <i:InvokeCommandAction Command="{Binding AuditCustomAppCommand}" CommandParameter="{Binding ElementName=customAppAuthList, Path=SelectedItem}"/>
-                            </i:EventTrigger>
-                        </i:Interaction.Triggers>
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <DockPanel MaxHeight="80" LastChildFill="False">
@@ -98,8 +93,10 @@
                                         </StackPanel>
                                     </StackPanel>
                                     <Button Visibility="{Binding auditorder, Converter={StaticResource ObjToVisibilityConverter}}"
-                                            IsEnabled="False"
-                                            DockPanel.Dock="Right">需要审核</Button>
+                                            DockPanel.Dock="Right" 
+                                            Command="{Binding ElementName=CustomApp, Path=DataContext.AuditCustomAppCommand}" 
+                                            CommandParameter="{Binding}"
+                                            >需要审核</Button>
                                 </DockPanel>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
