--- a/src/WeComLoad.Open/Views/CustomAppView.xaml
+++ b/src/WeComLoad.Open/Views/CustomAppView.xaml
@@ -5,22 +5,90 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:t="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:cv="clr-namespace:WeComLoad.Open.Common.Converters"
              mc:Ignorable="d" x:Name="CustomApp"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <cv:ObjToVisibilityConverter x:Key="ObjToVisibilityConverter"/>
+        <Style TargetType="Label">
+            <Setter Property="Foreground" Value="#FFFFFF"></Setter>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Label">
+                        <Border Padding="{TemplateBinding Padding}">
+                            <ContentPresenter RecognizesAccessKey="False"></ContentPresenter>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </UserControl.Resources>
     <materialDesign:DialogHost
                   IsOpen="{Binding DialogIsOpen}"
                   CloseOnClickAway="True"
                   DialogTheme="Inherit" Grid.Column="1">
         <materialDesign:DialogHost.DialogContent>
-            <TextBox
-              materialDesign:HintAssist.Hint="输入企业Id" MinWidth="300"
-              FontSize="20"
-              Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-              VerticalAlignment="Center" />
+            <Grid MinWidth="600">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="0.5*"/>
+                    <RowDefinition Height="0.5*"/>
+                    <RowDefinition/>
+                    <RowDefinition Height="0.5*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <TextBox Grid.ColumnSpan="2"
+                  materialDesign:HintAssist.Hint="输入企业Id" TextAlignment="Center"
+                  Text="{Binding CorpId, UpdateSourceTrigger=PropertyChanged}"
+                  MinWidth="300"
+                  Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                  VerticalAlignment="Center">
+                    <t:Interaction.Triggers>
+                        <t:EventTrigger EventName="TextChanged">
+                            <t:InvokeCommandAction Command="{Binding InputCorpIdCommand}"/>
+                        </t:EventTrigger>
+                    </t:Interaction.Triggers>
+                </TextBox>
+                <Grid Grid.ColumnSpan="2" Grid.Row="1" HorizontalAlignment="Center" Margin="0,10">
+                    <ListBox  x:Name="EnvList" Style="{StaticResource MaterialDesignChoiceChipPrimaryOutlineListBox}">
+                        <i:Interaction.Triggers>
+                            <i:EventTrigger EventName="SelectionChanged">
+                                <i:InvokeCommandAction Command="{Binding SelectedEnvCommand}" CommandParameter="{Binding ElementName=EnvList, Path=SelectedItem}"/>
+                            </i:EventTrigger>
+                        </i:Interaction.Triggers>
+                        <ListBoxItem Content="开发" IsSelected="True"/>
+                        <ListBoxItem Content="测试" />
+                        <ListBoxItem Content="正式" />
+                    </ListBox>
+                </Grid>
+                <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="2">
+                    <DockPanel Margin="10, 10">
+                        <Label Content="应用主页：" />
+                        <Label Content="{Binding HomePage}" />
+                    </DockPanel>
+                    <DockPanel Margin="10, 10">
+                        <Label  Content="可信域名："/>
+                        <Label Content="{Binding Domain}"/>
+                    </DockPanel>
+                    <DockPanel Margin="10, 10">
+                        <Label  Content="IP白名单：" />
+                        <Label   Content="{Binding Ip}"/>
+                    </DockPanel>
+                    <DockPanel Margin="10, 10">
+                        <Label  Content="回调地址：" />
+                        <Label Content="{Binding CallbackUrl}"/>
+                    </DockPanel>
+                </StackPanel>
+                <DockPanel Grid.ColumnSpan="2"  Grid.Row="3" LastChildFill="False" HorizontalAlignment="Center"  Margin="0, 10">
+                    <Button Command="{Binding AuditPublishAppCommand }">审核上线应用</Button>
+                </DockPanel>
+
+            </Grid>
         </materialDesign:DialogHost.DialogContent>
         <Grid>
             <Grid.RowDefinitions>
@@ -92,11 +160,10 @@
                                             <TextBlock Text="{Binding name}" Opacity="0.5" VerticalAlignment="Center"/>
                                         </StackPanel>
                                     </StackPanel>
-                                    <Button Visibility="{Binding auditorder, Converter={StaticResource ObjToVisibilityConverter}}"
-                                            DockPanel.Dock="Right" 
+                                    <Button DockPanel.Dock="Right" 
                                             Command="{Binding ElementName=CustomApp, Path=DataContext.AuditCustomAppCommand}" 
                                             CommandParameter="{Binding}"
-                                            >需要审核</Button>
+                                            >审核</Button>
                                 </DockPanel>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
