--- a/src/WeComLoad.Admin/MainWindow.xaml
+++ b/src/WeComLoad.Admin/MainWindow.xaml
@@ -3,21 +3,20 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WeComLoad"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         Title="WeComLoad" Height="650" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="20"/>
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
         <DockPanel LastChildFill="False" Grid.Row="1">
             <Button Margin="5, 0"  Click="Button_GetQrCode_Click">*获取登录二维码*</Button>
             <Button Margin="5, 0" Click="Button_GetCorpDepts_Click">获取企业部门列表</Button>
             <Button Margin="5, 0" Click="Button_GetAgents_Click">获取应用列表</Button>
+            <Button Margin="5, 0" Click="Button_GetAgentInfo_Click">获取应用详情</Button>
             <Button Margin="5, 0" Click="Button_GetExtContactAndUserSecret_Click">查看客户联系、通讯录Secret</Button>
             <Button Margin="5, 0" Click="Button_CreateAgent_Click" Width="52">创建应用</Button>
             <Button Margin="5, 0" Click="Button_ConfigAgent_Click" Width="52">配置应用</Button>
