--- a/src/WeComLoad.Admin/MainWindow.xaml
+++ b/src/WeComLoad.Admin/MainWindow.xaml
@@ -16,10 +16,9 @@
             <Button Margin="5, 0"  Click="Button_GetQrCode_Click">*获取登录二维码*</Button>
             <Button Margin="5, 0" Click="Button_GetCorpDepts_Click">获取企业部门列表</Button>
             <Button Margin="5, 0" Click="Button_GetAgents_Click">获取应用列表</Button>
+            <Button Margin="5, 0" Click="Button_CreateAgent_Click">创建应用</Button>
             <Button Margin="5, 0" Click="Button_GetAgentInfo_Click">获取应用详情</Button>
             <Button Margin="5, 0" Click="Button_GetExtContactAndUserSecret_Click">查看客户联系、通讯录Secret</Button>
-            <Button Margin="5, 0" Click="Button_CreateAgent_Click" Width="52">创建应用</Button>
-            <Button Margin="5, 0" Click="Button_ConfigAgent_Click" Width="52">配置应用</Button>
             <Button Margin="5, 0" Click="Button_ConfigContactCallback_Click">配置企业通讯录回调</Button>
             <Button Margin="5, 0" Click="Button_ConfigExtContactCallback_Click">配置客户联系回调</Button>
         </DockPanel>
