feat：login and config

--- a/src/WeComLoad.Open.Blazor/Layouts/BasicLayout.razor
+++ b/src/WeComLoad.Open.Blazor/Layouts/BasicLayout.razor
@@ -25,17 +25,26 @@
         },
         new MenuDataItem
         {
-            Path = "/",
+            Path = "/custapp",
             Name = "代开发自建应用管理",
             Key = "customize-app",
             Icon = "apartment",
         },
         new MenuDataItem
         {
-            Path = "/",
+            Path = "/setting",
             Name = "设置",
             Key = "setting",
             Icon = "setting",
+            Children = new  MenuDataItem[]
+            {
+                new MenuDataItem
+                {
+                    Path = "/setting/custapp",
+                    Name = "代开发自建应用配置",
+                    Key = "setting.custapp",
+                }
+            }
         }
     };
 }
