--- a/src/WeComLoad.Open.Blazor/_Imports.razor
+++ b/src/WeComLoad.Open.Blazor/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using WeComLoad.Open.Blazor
+@using WeComLoad.Open.Blazor.Layouts
